start setting up jupyter notebook

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -2,14 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7e2ef271-87a5-43b1-9aac-c9a6a2e59fc0",
+   "execution_count": null,
+   "id": "c726aef2-f52f-408c-be60-9a16c80b3133",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from ollama import chat"
+    "# 0. Imports and constants"
    ]
+  },
+  {
+   "cell_type": "code",
+   "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "source": [
+    "import os, json\n",
+    "import pandas as pd\n",
+    "import sys, os\n",
+    "from ollama import chat\n",
+    "from docling.document_converter import DocumentConverter\n",
+    "repo_root = os.path.abspath(\"..\")\n",
+    "sys.path.insert(0, repo_root)\n",
+    "\n",
+    "from notebooks.utils.phenopacket import Phenopacket\n",
+    "from notebooks.utils.evaluation import PhenotypeEvaluator\n",
+    "\n",
+    "print(\"hello\")"
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -170,7 +194,7 @@
    "outputs": [],
    "source": [
     "prompt = \"Please create a valid Phenopacket from the following text. The phenopackets needs to be in a valid json format.  Only return the phenopacket without any additional text:\"\n",
-    "model = \"hf.co/MaziyarPanahi/Mistral-Nemo-Instruct-2407-GGUF:Q4_K_M\" "
+    "model = \"hf.co/MaziyarPanahi/gemma-3-12b-it-GGUF:Q4_K_M\" "
    ]
   },
   {
@@ -559,9 +583,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (p5)",
    "language": "python",
-   "name": "python3"
+   "name": "p5"
   },
   "language_info": {
    "codemirror_mode": {
