Writing things a little out of order, trying to lay the groundwork

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -11,11 +11,26 @@
    "id": "187dea139446c775"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 0. Imports, Path Discovery & Sanity Checks\n",
+    "\n",
+    "Load all dependencies, discover the dataset CSV automatically, and validate critical directories.\n"
+   ],
+   "id": "298b82d55c7dad0e"
+  },
+  {
    "cell_type": "code",
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-09T12:46:02.086509Z",
+     "start_time": "2025-07-09T12:46:02.059869Z"
+    }
+   },
    "source": [
-    "# 0. Imports and constants\n",
+    "# 0. Basic Setup\n",
     "import sys, os, glob, json, subprocess\n",
     "import pandas as pd\n",
     "from ollama import chat\n",
@@ -25,25 +40,111 @@
     "# import .autonotebook\n",
     "# from .autonotebook import tqdm as notebook_tqdm\n",
     "\n",
-    "# Ensure repo root is on sys.path so our utils can be imported\n",
+    "# ensure project utils are importable\n",
     "repo_root = os.path.abspath(\"..\")\n",
     "if not os.path.isdir(os.path.join(repo_root, \"notebooks\")):\n",
     "    raise FileNotFoundError(f\"Expected notebook utils under {repo_root}/notebooks\")\n",
     "sys.path.insert(0, repo_root)\n",
-    "\n",
     "try:\n",
     "    from notebooks.utils.phenopacket import Phenopacket\n",
     "    from notebooks.utils.evaluation import PhenotypeEvaluator\n",
     "except ImportError as e:\n",
     "    raise ImportError(f\"Could not import project utils: {e}\")\n",
     "\n",
-    "# Paths for dataset and report output\n",
-    "DATASET_CSV = os.path.join(repo_root, \"scripts\", \"data\", \"tmp\", \"phenopacket_dataset.csv\")\n",
-    "REPORT_OUT = os.path.join(repo_root, \"reports\", \"first_report.json\")\n",
+    "# define all key paths\n",
+    "LLM_OUT_DIR = os.path.join(repo_root, \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"llm_output_dir\")\n",
+    "GT_NOTEBKS  = os.path.join(repo_root, \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"notebooks\")\n",
+    "PMID_PDFS    = os.path.join(repo_root, \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"pmid_pdfs\")\n",
+    "CSV_PATH     = os.path.join(repo_root, \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"phenopacket_dataset.csv\")\n",
+    "REPORT_OUT   = os.path.join(repo_root, \"reports\", \"first_report.json\")\n",
+    "os.makedirs(os.path.dirname(REPORT_OUT), exist_ok=True)\n",
     "\n",
-    "# Load dataset\n",
+    "\n",
+    "# If CSV doesn't exist, auto-generate it\n",
+    "if not os.path.isfile(CSV_PATH):\n",
+    "    if not os.path.isdir(LLM_OUT_DIR):\n",
+    "        raise FileNotFoundError(f\"LLM output directory not found: {LLM_OUT_DIR}\")\n",
+    "    if not os.path.isdir(GT_NOTEBKS):\n",
+    "        raise FileNotFoundError(f\"Ground-truth notebooks dir not found: {GT_NOTEBKS}\")\n",
+    "    subprocess.run([\n",
+    "        sys.executable, \"-m\", \"scripts.create_phenopacket_dataset\",\n",
+    "        LLM_OUT_DIR,\n",
+    "        GT_NOTEBKS,\n",
+    "        CSV_PATH,\n",
+    "        \"--recursive_input_dir\", \"True\",\n",
+    "        \"--recursive_ground_truth_dir\", \"True\"\n",
+    "    ], check=True)\n",
+    "    print(f\"Created dataset CSV at {CSV_PATH}\")\n",
+    "\n",
+    "\n",
+    "print(f\"Using DATASET_CSV = {DATASET_CSV}\")\n",
+    "print(f\"Will write report to {REPORT_OUT}\")\n",
+    "\n",
+    "print(\"hello0\")  # print hello 0 as a sanity check"
+   ],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "LLM output directory not found: /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/llm_output_dir",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mFileNotFoundError\u001B[39m                         Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[4]\u001B[39m\u001B[32m, line 31\u001B[39m\n\u001B[32m     29\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m os.path.isfile(CSV_PATH):\n\u001B[32m     30\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m os.path.isdir(LLM_OUT_DIR):\n\u001B[32m---> \u001B[39m\u001B[32m31\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mFileNotFoundError\u001B[39;00m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mLLM output directory not found: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mLLM_OUT_DIR\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n\u001B[32m     32\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m os.path.isdir(GT_NOTEBKS):\n\u001B[32m     33\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mFileNotFoundError\u001B[39;00m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mGround-truth notebooks dir not found: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mGT_NOTEBKS\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n",
+      "\u001B[31mFileNotFoundError\u001B[39m: LLM output directory not found: /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/llm_output_dir"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 1. Load Dataset\n",
+    "\n",
+    "Read the CSV of PMIDs, input paths, and truth paths into a DataFrame, dedupe, and verify columns.\n"
+   ],
+   "id": "dabf5f01d8e6a670"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "## 1. Load dataset\n",
     "df = pd.read_csv(DATASET_CSV)\n",
+    "print(f\"Loaded {len(df)} rows from {DATASET_CSV}\")\n",
     "\n",
+    "# Deduplicate and sanity-check columns\n",
+    "df = df.drop_duplicates(\"pmid\").reset_index(drop=True)\n",
+    "required = {\"pmid\", \"input\", \"truth\"}\n",
+    "missing = required - set(df.columns)\n",
+    "if missing:\n",
+    "    raise KeyError(f\"Missing expected columns in dataset CSV: {missing}\")\n",
+    "\n",
+    "df.head()\n",
+    "\n",
+    "print(\"hello1\")  # print hello 1 as a sanity check"
+   ],
+   "id": "598b33092ab85352",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 1.5 Discover Phenopacket-Store Files\n",
+    "\n",
+    "Locate all JSON phenopacket files in the `phenopacket_store` folder.\n"
+   ],
+   "id": "2a1755b2eb294368"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# 1.5. Find the ground truth phenopackets\n",
     "store_root = os.path.join(repo_root, \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"notebooks\")\n",
     "if not os.path.isdir(store_root):\n",
     "    raise FileNotFoundError(f\"Phenopacket store directory not found: {store_root}\")\n",
@@ -53,97 +154,15 @@
     "if not packet_paths:\n",
     "    raise FileNotFoundError(f\"No phenopacket JSON files found with pattern: {pattern}\")\n",
     "\n",
-    "# Load and parse phenopackets\n",
-    "phenopacket_objs = []\n",
-    "for path in packet_paths:\n",
-    "    if not os.path.isfile(path):\n",
-    "        raise FileNotFoundError(f\"Expected file but not found: {path}\")\n",
-    "    try:\n",
-    "        with open(path, \"r\", encoding=\"utf-8\") as f:\n",
-    "            data = json.load(f)\n",
-    "    except json.JSONDecodeError as e:\n",
-    "        raise ValueError(f\"Invalid JSON in file {path}: {e}\")\n",
-    "    try:\n",
-    "        phenopacket_objs.append(Phenopacket.from_dict(data))\n",
-    "    except Exception as e:\n",
-    "        raise RuntimeError(f\"Failed to parse Phenopacket from {path}: {e}\")\n",
+    "store_packets = []\n",
+    "for p in packet_paths:\n",
+    "    with open(p, \"r\", encoding=\"utf-8\") as f:\n",
+    "        data = json.load(f)\n",
+    "    store_packets.append(Phenopacket.from_dict(data))\n",
     "\n",
-    "print(f\"Loaded dataset with {len(df)} entries and {len(phenopacket_objs)} phenopacket objects.\")\n",
+    "print(f\"Discovered {len(store_packets)} phenopackets in store.\")\n",
     "\n",
-    "print(\"hello0\")  # print hello 0 as a sanity check"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "## 1. Load dataset\n",
-    "\n",
-    "Read in the CSV that lists PMIDs, input file paths, and truth file paths.\n"
-   ],
-   "id": "2a1755b2eb294368"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "import glob\n",
-    "\n",
-    "# 1A) Try to locate phenopacket_dataset.csv\n",
-    "csv_cand = glob.glob(\"../**/phenopacket_dataset.csv\", recursive=True)\n",
-    "if csv_cand:\n",
-    "    # Use the single CSV if found\n",
-    "    DATASET_CSV = csv_cand[0]\n",
-    "    print(f\"Found dataset CSV at {DATASET_CSV}, loading…\")\n",
-    "    df = pd.read_csv(DATASET_CSV)\n",
-    "else:\n",
-    "    # 1A-FALLBACK) No CSV—auto‐build DataFrame by scanning input & truth files\n",
-    "    print(\"No phenopacket_dataset.csv found; auto-discovering inputs and truths…\")\n",
-    "\n",
-    "    # adjust these patterns to your actual folder structure\n",
-    "    input_paths = glob.glob(\"../scripts/data/tmp/**/*.*(txt|pdf)\", recursive=True)\n",
-    "    truth_paths = glob.glob(\"../scripts/data/tmp/**/*.json\", recursive=True)\n",
-    "\n",
-    "\n",
-    "    # map PMID → file\n",
-    "    def pmid_key(path):\n",
-    "        return os.path.splitext(os.path.basename(path))[0]\n",
-    "\n",
-    "\n",
-    "    inputs_by_pmid = {pmid_key(p): p for p in input_paths}\n",
-    "    truths_by_pmid = {pmid_key(p): p for p in truth_paths}\n",
-    "\n",
-    "    pmids = set(inputs_by_pmid) & set(truths_by_pmid)\n",
-    "    if not pmids:\n",
-    "        raise RuntimeError(\"No matching PMIDs found between inputs and truth files.\")\n",
-    "    missing_inputs = set(truths_by_pmid) - set(inputs_by_pmid)\n",
-    "    missing_truths = set(inputs_by_pmid) - set(truths_by_pmid)\n",
-    "    if missing_inputs or missing_truths:\n",
-    "        raise RuntimeError(\n",
-    "            f\"Unpaired files detected. \"\n",
-    "            f\"Missing inputs for {missing_inputs}, missing truths for {missing_truths}\"\n",
-    "        )\n",
-    "    # build the DataFrame\n",
-    "    df = pd.DataFrame([\n",
-    "        {\"pmid\": pmid, \"input\": inputs_by_pmid[pmid], \"truth\": truths_by_pmid[pmid]}\n",
-    "        for pmid in sorted(pmids)\n",
-    "    ])\n",
-    "\n",
-    "print(f\"Assembled {len(df)} cases.\")\n",
-    "# 1B) Deduplicate just in case\n",
-    "df = df.drop_duplicates(\"pmid\").reset_index(drop=True)\n",
-    "\n",
-    "# 1C) Sanity‐check columns\n",
-    "required_cols = {\"pmid\", \"input\", \"truth\"}\n",
-    "missing = required_cols - set(df.columns)\n",
-    "if missing:\n",
-    "    raise KeyError(f\"Missing expected columns: {missing}\")\n",
-    "\n",
-    "df.head()\n",
-    "\n",
-    "print(\"hello1\")  # print hello 1 as a sanity check"
+    "print(\"hello1.5\")  # print hello 1.5 as a sanity check"
    ],
    "id": "8118b55fc2741c2b",
    "outputs": [],
@@ -163,6 +182,8 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "# Setup conversion for input material to LLM-compatible txt\n",
+    "\n",
     "# Initialize converter once\n",
     "converter = DocumentConverter()\n",
     "\n",
@@ -193,7 +214,9 @@
    "id": "cbc0b863-bf20-4a46-95de-9506e9875678",
    "metadata": {},
    "source": [
-    "## 3. Load inputs & ground truth\n",
+    "## 3. Load Inputs & Ground Truth\n",
+    "\n",
+    "Iterate the DataFrame, load each input summary and corresponding truth phenopacket.\n",
     "\n",
     "- `inputs`: raw clinical summaries\n",
     "- `truth_packets`: parsed Phenopacket objects from JSON files\n"
@@ -254,8 +277,8 @@
     "\n",
     "case0_txt = input_texts[0]\n",
     "prompt = (\n",
-    "    \"Please create a valid Phenopacket from the following clinical summary. \"\n",
-    "    \"Return *only* the JSON phenopacket object.\"\n",
+    "    \"Please create a valid Phenopacket v2.0 from the following clinical summary. \"\n",
+    "    \"Return *only* the JSON phenopacket object, ensuring correct HPO terms, IDs, and definitions\"\n",
     ")\n",
     "\n",
     "# 4B) Run the model\n",
@@ -341,9 +364,7 @@
     "if \"metrics\" not in report:\n",
     "    raise KeyError(\"Evaluator report missing 'metrics' field.\")\n",
     "\n",
-    "import pprint;\n",
-    "\n",
-    "pprint.pprint(report)\n",
+    "import pprint; pprint.pprint(report)\n",
     "\n",
     "print(\"hello6\")  # print hello 6 as a sanity check"
    ],
