Writing things a little out of order, trying to lay the groundwork. Still not ready

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -111,7 +111,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "## 1. Load dataset\n",
+    "## 1. Load datasets\n",
     "df = pd.read_csv(DATASET_CSV)\n",
     "print(f\"Loaded {len(df)} rows from {DATASET_CSV}\")\n",
     "\n",
