Forgot to import Report class

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -33,6 +33,7 @@
     "# 0. Basic Setup\n",
     "import sys, os, glob, json, subprocess\n",
     "import pandas as pd\n",
+    "from typing import List\n",
     "from ollama import chat\n",
     "from docling.document_converter import DocumentConverter\n",
     "\n",
@@ -47,6 +48,7 @@
     "sys.path.insert(0, repo_root)\n",
     "try:\n",
     "    from notebooks.utils.phenopacket import Phenopacket\n",
+    "    from notebooks.utils.report import Report\n",
     "    from notebooks.utils.evaluation import PhenotypeEvaluator\n",
     "except ImportError as e:\n",
     "    raise ImportError(f\"Could not import project utils: {e}\")\n",
