Setting up Steps 0 and 1 again

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -23,12 +23,7 @@
   {
    "cell_type": "code",
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-09T12:46:02.086509Z",
-     "start_time": "2025-07-09T12:46:02.059869Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "# 0. Basic Setup\n",
     "import sys, os, glob, json, subprocess\n",
@@ -41,11 +36,13 @@
     "# import .autonotebook\n",
     "# from .autonotebook import tqdm as notebook_tqdm\n",
     "\n",
-    "# ensure project utils are importable\n",
-    "repo_root = os.path.abspath(\"..\")\n",
-    "if not os.path.isdir(os.path.join(repo_root, \"notebooks\")):\n",
-    "    raise FileNotFoundError(f\"Expected notebook utils under {repo_root}/notebooks\")\n",
-    "sys.path.insert(0, repo_root)\n",
+    "# Make sure our utils folder is on PYTHONPATH\n",
+    "project_root = os.path.abspath(\"..\")\n",
+    "utils_folder   = os.path.join(project_root, \"notebooks\", \"utils\")\n",
+    "if not os.path.isdir(utils_folder):\n",
+    "    raise FileNotFoundError(\"Expected utils under %s\" % utils_folder)\n",
+    "sys.path.insert(0, project_root)\n",
+    "\n",
     "try:\n",
     "    from notebooks.utils.phenopacket import Phenopacket\n",
     "    from notebooks.utils.report import Report\n",
@@ -54,50 +51,47 @@
     "    raise ImportError(f\"Could not import project utils: {e}\")\n",
     "\n",
     "# define all key paths\n",
-    "LLM_OUT_DIR = os.path.join(repo_root, \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"llm_output_dir\")\n",
-    "GT_NOTEBKS  = os.path.join(repo_root, \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"notebooks\")\n",
-    "PMID_PDFS    = os.path.join(repo_root, \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"pmid_pdfs\")\n",
-    "CSV_PATH     = os.path.join(repo_root, \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"phenopacket_dataset.csv\")\n",
-    "REPORT_OUT   = os.path.join(repo_root, \"reports\", \"first_report.json\")\n",
-    "os.makedirs(os.path.dirname(REPORT_OUT), exist_ok=True)\n",
+    "pdf_input_directory = os.path.join(project_root, \"scripts\",\"data\",\"tmp\", \"phenopacket_store\",\"pmid_pdfs\")\n",
+    "ground_truth_notebooks_directory = os.path.join(project_root, \"scripts\",\"data\",\"tmp\", \"phenopacket_store\",\"notebooks\")\n",
+    "llm_output_directory = os.path.join(project_root, \"scripts\",\"data\",\"tmp\", \"phenopacket_store\",\"llm_output_dir\")\n",
+    "dataset_csv_path = os.path.join(project_root, \"scripts\",\"data\",\"tmp\", \"phenopacket_store\", \"phenopacket_dataset.csv\")\n",
+    "experimental_output_directory = os.path.join(project_root, \"experimental-data\")\n",
+    "evaluation_report_output_path = os.path.join(project_root, \"reports\",\"first_report.json\")\n",
+    "\n",
+    "# Create any missing output folders\n",
+    "os.makedirs(experimental_output_directory, exist_ok=True)\n",
+    "os.makedirs(os.path.dirname(evaluation_report_output_path), exist_ok=True)\n",
     "\n",
     "\n",
-    "# If CSV doesn't exist, auto-generate it\n",
-    "if not os.path.isfile(CSV_PATH):\n",
-    "    if not os.path.isdir(LLM_OUT_DIR):\n",
-    "        raise FileNotFoundError(f\"LLM output directory not found: {LLM_OUT_DIR}\")\n",
-    "    if not os.path.isdir(GT_NOTEBKS):\n",
-    "        raise FileNotFoundError(f\"Ground-truth notebooks dir not found: {GT_NOTEBKS}\")\n",
+    "# If dataset CSV does not exist, run the CLI to generate it\n",
+    "if not os.path.isfile(dataset_csv_path):\n",
+    "    if not os.path.isdir(pdf_input_directory):\n",
+    "        raise FileNotFoundError(\"PDF input directory not found: %s\"\n",
+    "                                % pdf_input_directory)\n",
+    "    if not os.path.isdir(ground_truth_notebooks_directory):\n",
+    "        raise FileNotFoundError(\"Ground truth notebooks dir not found: %s\"\n",
+    "                                % ground_truth_notebooks_directory)\n",
+    "\n",
     "    subprocess.run([\n",
-    "        sys.executable, \"-m\", \"scripts.create_phenopacket_dataset\",\n",
-    "        LLM_OUT_DIR,\n",
-    "        GT_NOTEBKS,\n",
-    "        CSV_PATH,\n",
+    "        sys.executable, \"-m\",\n",
+    "        \"scripts.create_phenopacket_dataset\",\n",
+    "        pdf_input_directory,\n",
+    "        ground_truth_notebooks_directory,\n",
+    "        llm_output_directory,\n",
+    "        dataset_csv_path,\n",
     "        \"--recursive_input_dir\", \"True\",\n",
     "        \"--recursive_ground_truth_dir\", \"True\"\n",
     "    ], check=True)\n",
-    "    print(f\"Created dataset CSV at {CSV_PATH}\")\n",
+    "    print(\"Created dataset CSV at %s\" % dataset_csv_path)\n",
     "\n",
-    "\n",
-    "print(f\"Using DATASET_CSV = {DATASET_CSV}\")\n",
-    "print(f\"Will write report to {REPORT_OUT}\")\n",
+    "print(\"Using dataset CSV: %s\" % dataset_csv_path)\n",
+    "print(\"Experimental outputs will be saved under: %s\" % experimental_output_directory)\n",
+    "print(\"Evaluation report will be saved to: %s\" % evaluation_report_output_path)\n",
     "\n",
     "print(\"hello0\")  # print hello 0 as a sanity check"
    ],
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "LLM output directory not found: /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/llm_output_dir",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mFileNotFoundError\u001B[39m                         Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[4]\u001B[39m\u001B[32m, line 31\u001B[39m\n\u001B[32m     29\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m os.path.isfile(CSV_PATH):\n\u001B[32m     30\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m os.path.isdir(LLM_OUT_DIR):\n\u001B[32m---> \u001B[39m\u001B[32m31\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mFileNotFoundError\u001B[39;00m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mLLM output directory not found: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mLLM_OUT_DIR\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n\u001B[32m     32\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m os.path.isdir(GT_NOTEBKS):\n\u001B[32m     33\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mFileNotFoundError\u001B[39;00m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mGround-truth notebooks dir not found: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mGT_NOTEBKS\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n",
-      "\u001B[31mFileNotFoundError\u001B[39m: LLM output directory not found: /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/llm_output_dir"
-     ]
-    }
-   ],
-   "execution_count": 4
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -105,7 +99,7 @@
    "source": [
     "## 1. Load Dataset\n",
     "\n",
-    "Read the CSV of PMIDs, input paths, and truth paths into a DataFrame, dedupe, and verify columns.\n"
+    "Read the CSV of PMIDs, input paths, and truth paths\n"
    ],
    "id": "dabf5f01d8e6a670"
   },
@@ -114,17 +108,17 @@
    "cell_type": "code",
    "source": [
     "## 1. Load datasets\n",
-    "df = pd.read_csv(DATASET_CSV)\n",
-    "print(f\"Loaded {len(df)} rows from {DATASET_CSV}\")\n",
+    "dataframe_cases = pd.read_csv(dataset_csv_path)\n",
+    "print(\"Loaded %d rows from dataset CSV\" % len(dataframe_cases))\n",
     "\n",
     "# Deduplicate and sanity-check columns\n",
-    "df = df.drop_duplicates(\"pmid\").reset_index(drop=True)\n",
-    "required = {\"pmid\", \"input\", \"truth\"}\n",
-    "missing = required - set(df.columns)\n",
-    "if missing:\n",
-    "    raise KeyError(f\"Missing expected columns in dataset CSV: {missing}\")\n",
+    "dataframe_cases = dataframe_cases.drop_duplicates(\"pmid\").reset_index(drop=True)\n",
+    "required_columns = {\"pmid\", \"input\", \"truth\"}\n",
+    "missing_columns = required_columns - set(dataframe_cases.columns)\n",
+    "if missing_columns:\n",
+    "    raise KeyError(\"Missing required columns: %s\" % missing_columns)\n",
     "\n",
-    "df.head()\n",
+    "dataframe_cases.head()\n",
     "\n",
     "print(\"hello1\")  # print hello 1 as a sanity check"
    ],
@@ -212,9 +206,8 @@
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
-   "id": "cbc0b863-bf20-4a46-95de-9506e9875678",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## 3. Load Inputs & Ground Truth\n",
     "\n",
@@ -222,7 +215,8 @@
     "\n",
     "- `inputs`: raw clinical summaries\n",
     "- `truth_packets`: parsed Phenopacket objects from JSON files\n"
-   ]
+   ],
+   "id": "cbc0b863-bf20-4a46-95de-9506e9875678"
   },
   {
    "cell_type": "code",
