--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -25,7 +25,7 @@
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
    "metadata": {},
    "source": [
-    "# 0. Basic Setup\n",
+    "# Basic Setup\n",
     "import sys, os, glob, json, subprocess\n",
     "import pandas as pd\n",
     "from typing import List\n",
@@ -51,30 +51,35 @@
     "    raise ImportError(f\"Could not import project utils: {e}\")\n",
     "\n",
     "# define all key paths\n",
-    "pdf_input_directory = os.path.join(project_root, \"scripts\",\"data\",\"tmp\", \"phenopacket_store\",\"pmid_pdfs\")\n",
-    "ground_truth_notebooks_directory = os.path.join(project_root, \"scripts\",\"data\",\"tmp\", \"phenopacket_store\",\"notebooks\")\n",
-    "llm_output_directory = os.path.join(project_root, \"scripts\",\"data\",\"tmp\", \"phenopacket_store\",\"llm_output_dir\")\n",
-    "dataset_csv_path = os.path.join(project_root, \"scripts\",\"data\",\"tmp\", \"phenopacket_store\", \"phenopacket_dataset.csv\")\n",
-    "experimental_output_directory = os.path.join(project_root, \"experimental-data\")\n",
-    "evaluation_report_output_path = os.path.join(project_root, \"reports\",\"first_report.json\")\n",
+    "pdf_input_directory = os.path.join(project_root, \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"pmid_pdfs\")            # scripts/data/tmp/phenopacket_store/pmid_pdfs/\n",
+    "ground_truth_notebooks_directory = os.path.join(project_root, \"scripts\",\"data\",\"tmp\", \"phenopacket_store\",\"notebooks\")  # scripts/data/tmp/phenopacket_store/notebooks/\n",
+    "# All experimental outputs go under here\n",
+    "experimental_data_root = os.path.join(project_root, \"experimental-data\")\n",
+    "llm_output_directory = os.path.join(experimental_data_root, \"llm_output_dir\")                                           # intermediate .txt + raw JSON from LLM\n",
+    "dataset_csv_path = os.path.join(experimental_data_root, \"phenopacket_dataset.csv\")                                      # phenopacket_dataset.csv, manifest of pmid -> input -> truth\n",
+    "validated_jsons_directory = os.path.join(experimental_data_root, \"validated_jsons\")                                     # validated_jsons, the final validated LLM phenopackets\n",
+    "evaluation_report_output_path = os.path.join(project_root, \"reports\", \"first_report.json\")                              # the evaluation metrics report\n",
     "\n",
     "# Create any missing output folders\n",
-    "os.makedirs(experimental_output_directory, exist_ok=True)\n",
+    "os.makedirs(llm_output_directory, exist_ok=True)\n",
+    "os.makedirs(validated_jsons_directory, exist_ok=True)\n",
     "os.makedirs(os.path.dirname(evaluation_report_output_path), exist_ok=True)\n",
     "\n",
     "\n",
     "# If dataset CSV does not exist, run the CLI to generate it\n",
     "if not os.path.isfile(dataset_csv_path):\n",
     "    if not os.path.isdir(pdf_input_directory):\n",
-    "        raise FileNotFoundError(\"PDF input directory not found: %s\"\n",
-    "                                % pdf_input_directory)\n",
+    "        raise FileNotFoundError(\n",
+    "            \"PDF input directory not found: %s\" % pdf_input_directory\n",
+    "        )\n",
     "    if not os.path.isdir(ground_truth_notebooks_directory):\n",
-    "        raise FileNotFoundError(\"Ground truth notebooks dir not found: %s\"\n",
-    "                                % ground_truth_notebooks_directory)\n",
+    "        raise FileNotFoundError(\n",
+    "            \"Ground truth notebooks directory not found: %s\"\n",
+    "            % ground_truth_notebooks_directory\n",
+    "        )\n",
     "\n",
     "    subprocess.run([\n",
-    "        sys.executable, \"-m\",\n",
-    "        \"scripts.create_phenopacket_dataset\",\n",
+    "        sys.executable, \"-m\", \"scripts.create_phenopacket_dataset\",\n",
     "        pdf_input_directory,\n",
     "        ground_truth_notebooks_directory,\n",
     "        llm_output_directory,\n",
@@ -84,9 +89,12 @@
     "    ], check=True)\n",
     "    print(\"Created dataset CSV at %s\" % dataset_csv_path)\n",
     "\n",
-    "print(\"Using dataset CSV: %s\" % dataset_csv_path)\n",
-    "print(\"Experimental outputs will be saved under: %s\" % experimental_output_directory)\n",
-    "print(\"Evaluation report will be saved to: %s\" % evaluation_report_output_path)\n",
+    "print(\"PDF inputs folder:       %s\" % pdf_input_directory)\n",
+    "print(\"Ground truth folder:     %s\" % ground_truth_notebooks_directory)\n",
+    "print(\"LLM outputs folder:      %s\" % llm_output_directory)\n",
+    "print(\"Dataset CSV path:        %s\" % dataset_csv_path)\n",
+    "print(\"Validated JSONs folder:  %s\" % validated_jsons_directory)\n",
+    "print(\"Evaluation report path:  %s\" % evaluation_report_output_path)\n",
     "\n",
     "print(\"hello0\")  # print hello 0 as a sanity check"
    ],
@@ -107,17 +115,21 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "## 1. Load datasets\n",
+    "# Load datasets\n",
     "dataframe_cases = pd.read_csv(dataset_csv_path)\n",
     "print(\"Loaded %d rows from dataset CSV\" % len(dataframe_cases))\n",
     "\n",
-    "# Deduplicate and sanity-check columns\n",
+    "# Drop duplicate PMIDs\n",
     "dataframe_cases = dataframe_cases.drop_duplicates(\"pmid\").reset_index(drop=True)\n",
+    "print(\"After deduplication: %d unique PMID cases\" %len(dataframe_cases))\n",
+    "\n",
+    "# Verify required columns\n",
     "required_columns = {\"pmid\", \"input\", \"truth\"}\n",
     "missing_columns = required_columns - set(dataframe_cases.columns)\n",
     "if missing_columns:\n",
     "    raise KeyError(\"Missing required columns: %s\" % missing_columns)\n",
     "\n",
+    "# Preview first few rows\n",
     "dataframe_cases.head()\n",
     "\n",
     "print(\"hello1\")  # print hello 1 as a sanity check"
@@ -130,9 +142,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 1.5 Discover Phenopacket-Store Files\n",
+    "## 2 Discover Phenopacket-Store Files\n",
     "\n",
-    "Locate all JSON phenopacket files in the `phenopacket_store` folder.\n"
+    "Locate all ground-truth Phenopacket JSON files under the `phenopacket_store/notebooks/` directory."
    ],
    "id": "2a1755b2eb294368"
   },
@@ -140,25 +152,14 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# 1.5. Find the ground truth phenopackets\n",
-    "store_root = os.path.join(repo_root, \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"notebooks\")\n",
-    "if not os.path.isdir(store_root):\n",
-    "    raise FileNotFoundError(f\"Phenopacket store directory not found: {store_root}\")\n",
+    "search_pattern = os.path.join(ground_truth_notebooks_directory, \"*\", \"phenopackets\", \"*.json\")\n",
+    "truth_json_filepaths = glob.glob(search_pattern, recursive=True)\n",
+    "if not truth_json_filepaths:\n",
+    "    raise FileNotFoundError(\"No ground-truth phenopacket JSON files found with pattern: %s\" % search_pattern)\n",
     "\n",
-    "pattern = os.path.join(store_root, \"*\", \"phenopackets\", \"*.json\")\n",
-    "packet_paths = glob.glob(pattern)\n",
-    "if not packet_paths:\n",
-    "    raise FileNotFoundError(f\"No phenopacket JSON files found with pattern: {pattern}\")\n",
+    "print(\"Discovered %d ground-truth JSON files\" %len(truth_json_filepaths))\n",
     "\n",
-    "store_packets = []\n",
-    "for p in packet_paths:\n",
-    "    with open(p, \"r\", encoding=\"utf-8\") as f:\n",
-    "        data = json.load(f)\n",
-    "    store_packets.append(Phenopacket.from_dict(data))\n",
-    "\n",
-    "print(f\"Discovered {len(store_packets)} phenopackets in store.\")\n",
-    "\n",
-    "print(\"hello1.5\")  # print hello 1.5 as a sanity check"
+    "print(\"hello2\")  # print hello 2 as a sanity check"
    ],
    "id": "8118b55fc2741c2b",
    "outputs": [],
@@ -168,9 +169,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 2. Prepare document-to-text helper\n",
+    "## 3. Prepare PDF-to-Text Converter and Helper Function\n",
     "\n",
-    "Convert either `.txt` or PDF into the raw case summary text for the LLM.\n"
+    "Instantiate DocumentConverter and define a helper function to load or convert the clinical PDFs for LLM input.\n"
    ],
    "id": "9a9faff43b491b26"
   },
@@ -183,23 +184,28 @@
     "# Initialize converter once\n",
     "converter = DocumentConverter()\n",
     "\n",
+    "pdf_to_text_converter = DocumentConverter()\n",
     "\n",
-    "def load_text(path: str) -> str:\n",
+    "def load_clinical_summary(input_path):\n",
     "    \"\"\"\n",
-    "    Convert .txt or PDF -> plain text for LLM input.\n",
-    "    Splits off any '[text]' marker if present.\n",
+    "    Convert .txt or .pdf file at input_path into a plain text string.\n",
+    "\n",
+    "    Raises FileNotFoundError if the file does not exist.\n",
     "    \"\"\"\n",
-    "    if not os.path.isfile(path):\n",
-    "        raise FileNotFoundError(f\"Input file not found: {path}\")\n",
-    "    if path.lower().endswith(\".txt\"):\n",
-    "        with open(path, encoding=\"utf-8\") as f:\n",
-    "            return f.read().split(\"[text]\")[-1]\n",
+    "    if not os.path.isfile(input_path):\n",
+    "        raise FileNotFoundError(\"Input file not found: %s\" % input_path)\n",
+    "    lower = input_path.lower()\n",
+    "    if lower.endswith(\".txt\"):\n",
+    "        with open(input_path, encoding=\"utf-8\") as f:\n",
+    "            content = f.read()\n",
+    "        # Remove any leading markers\n",
+    "        return content.split(\"[text]\")[-1]\n",
     "    else:\n",
-    "        doc = converter.convert(path)\n",
+    "        doc = pdf_to_text_converter.convert(input_path)\n",
     "        return doc.document.export_to_text()\n",
     "\n",
     "\n",
-    "print(\"hello2\")  # print hello 2 as a sanity check"
+    "print(\"hello2\")  # print hello 3 as a sanity check"
    ],
    "id": "231c1c375a6ec410",
    "outputs": [],
@@ -209,12 +215,12 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 3. Load Inputs & Ground Truth\n",
+    "## 4. Load Clinical Summaries and Ground-Truth Phenopackets\n",
     "\n",
-    "Iterate the DataFrame, load each input summary and corresponding truth phenopacket.\n",
+    "Iterate over each case, load the clinical summary text #   and the corresponding ground-truth Phenopacket object.\n",
     "\n",
-    "- `inputs`: raw clinical summaries\n",
-    "- `truth_packets`: parsed Phenopacket objects from JSON files\n"
+    "- `list_inputs`: raw clinical summaries\n",
+    "- `list_truth_packets`: parsed Phenopacket objects from JSON files\n"
    ],
    "id": "cbc0b863-bf20-4a46-95de-9506e9875678"
   },
@@ -223,30 +229,25 @@
    "id": "235eaff7-4f21-4a21-81bf-e97236ca26d1",
    "metadata": {},
    "source": [
-    "input_texts = []\n",
-    "truth_packets = []\n",
+    "list_input_texts   = []\n",
+    "list_truth_packets = []\n",
     "\n",
-    "for idx, row in df.iterrows():\n",
-    "    inp, truth_fp = row[\"input\"], row[\"truth\"]\n",
+    "for idx, row in dataframe_cases.iterrows():\n",
+    "    pmid_value = row[\"pmid\"]\n",
+    "    pdf_path   = row[\"input\"]\n",
+    "    truth_path = row[\"truth\"]\n",
     "\n",
-    "    # 3A) Load and check input text\n",
-    "    try:\n",
-    "        txt = load_text(inp)\n",
-    "    except Exception as e:\n",
-    "        raise RuntimeError(f\"[Row {idx}] Error loading input '{inp}': {e}\")\n",
-    "    input_texts.append(txt)\n",
+    "    # Load the clinical summary\n",
+    "    clinical_summary = load_clinical_summary(pdf_path)\n",
+    "    list_input_texts.append(clinical_summary)\n",
     "\n",
-    "    # 3B) Load and check truth phenopacket\n",
-    "    if not os.path.isfile(truth_fp):\n",
-    "        raise FileNotFoundError(f\"[Row {idx}] Truth file not found: {truth_fp}\")\n",
-    "    try:\n",
-    "        with open(truth_fp, \"r\", encoding=\"utf-8\") as f:\n",
-    "            data = json.load(f)\n",
-    "        truth_packets.append(Phenopacket.from_dict(data))\n",
-    "    except Exception as e:\n",
-    "        raise RuntimeError(f\"[Row {idx}] Error parsing truth phenopacket '{truth_fp}': {e}\")\n",
+    "    # Load and validate the ground-truth Phenopacket\n",
+    "    truth_packet = Phenopacket.load_from_file(truth_path)\n",
+    "    list_truth_packets.append(truth_packet)\n",
     "\n",
-    "print(f\"Prepared {len(input_texts)} cases and {len(truth_packets)} ground-truth packets.\")\n",
+    "assert len(list_input_texts) == len(list_truth_packets)\n",
+    "print(\"Loaded %d clinical summaries and %d ground-truth packets\" %\n",
+    "      (len(list_input_texts), len(list_truth_packets)))\n",
     "\n",
     "print(\"hello3\")  # print hello 3 as a sanity check"
    ],
