--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -258,9 +258,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 4. Sanity-check one inference\n",
+    "## 5. Sanity-check one inference\n",
     "\n",
-    "Run the model on the first case to ensure everything is wired up correctly.\n"
+    "Run one LLM call on the first case to verify prompting and parsing work correctly.\n"
    ],
    "id": "3165f6539c3dfc20"
   },
@@ -268,33 +268,29 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# 4A) Verify we have at least one case\n",
-    "if not input_texts:\n",
-    "    raise RuntimeError(\"No input cases were loaded; aborting inference.\")\n",
-    "\n",
-    "case0_txt = input_texts[0]\n",
-    "prompt = (\n",
+    "# Define the LLM prompt\n",
+    "llm_prompt = (\n",
     "    \"Please create a valid Phenopacket v2.0 from the following clinical summary. \"\n",
-    "    \"Return *only* the JSON phenopacket object, ensuring correct HPO terms, IDs, and definitions\"\n",
+    "    \"Return only the JSON object without any extra text.\"\n",
     ")\n",
     "\n",
-    "# 4B) Run the model\n",
-    "resp = chat(\n",
-    "    model=\"llama3.2:latest\",  # swap to your model of choice\n",
-    "    messages=[{\"role\": \"user\", \"content\": f\"{prompt}\\n\\n{case0_txt}\\n\\n[EOS]\"}]\n",
+    "# Perform inference on the first clinical PDF\n",
+    "first_response = chat(\n",
+    "    model=\"llama3.2:latest\",\n",
+    "    messages=[{\"role\": \"user\", \"content\": llm_prompt + \"\\n\\n\" + list_input_texts[0] + \"\\n\\n[EOS]\"}]\n",
     ")\n",
-    "raw = resp[\"message\"][\"content\"]\n",
-    "print(raw)\n",
+    "raw_prediction = first_response[\"message\"][\"content\"]\n",
+    "print(\"Raw LLM output (first ~300 chars or so):\")\n",
+    "print(raw_prediction[:300] + \"...\")\n",
     "\n",
-    "# 4C) Parse and wrap\n",
+    "# Parse and validate the first Phenopacket\n",
     "try:\n",
-    "    pred_packet0 = Phenopacket.from_dict(json.loads(raw))\n",
-    "except Exception as e:\n",
-    "    raise ValueError(f\"Failed to parse model output as Phenopacket JSON: {e}\")\n",
+    "    predicted_first_packet = Phenopacket.from_dict(json.loads(raw_prediction))\n",
+    "    print(\"Parsed first prediction successfully:\", predicted_first_packet)\n",
+    "except Exception as error:\n",
+    "    raise ValueError(\"Failed to parse first LLM output: %s\" % error)\n",
     "\n",
-    "pred_packet0  # inspect structure\n",
-    "\n",
-    "print(\"hello4\")  # print hello 4 as a sanity check"
+    "print(\"hello5\")  # print hello 5 as a sanity check"
    ],
    "id": "1f547b47f98fc0b3",
    "outputs": [],
