Write up a draft of Steps 6 and 7

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -300,9 +300,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 5. Batch inference\n",
+    "## 6. Batch Inference and Save Validated Phenopackets\n",
     "\n",
-    "Loop over all cases, collect predicted phenopackets.\n"
+    "Loop over all cases, run LLM inference, validate each JSON as a Phenopacket, and save to disk under validated_jsons_directory.\n"
    ],
    "id": "d07ca4ef808a00ad"
   },
@@ -313,25 +313,38 @@
    "source": [
     "predicted_packets = []\n",
     "\n",
-    "for idx, txt in enumerate(input_texts):\n",
-    "    resp = chat(\n",
+    "for idx, clinical_text in enumerate(list_input_texts):\n",
+    "    pmid_value = dataframe_cases.loc[idx, \"pmid\"]\n",
+    "    response = chat(\n",
     "        model=\"llama3.2:latest\",\n",
-    "        messages=[{\"role\": \"user\", \"content\": f\"{prompt}\\n\\n{txt}\\n\\n[EOS]\"}],\n",
+    "        messages=[{\"role\": \"user\",\n",
+    "                   \"content\": llm_prompt + \"\\n\\n\" + clinical_text + \"\\n\\n[EOS]\"}],\n",
     "        options={\"--hidethinking\": True}\n",
     "    )\n",
-    "    content = resp[\"message\"][\"content\"]\n",
+    "    llm_content = response[\"message\"][\"content\"]\n",
+    "    # Parse the JSON into a Phenopacket\n",
     "    try:\n",
-    "        pkt = Phenopacket.from_dict(json.loads(content))\n",
-    "    except Exception as e:\n",
-    "        raise RuntimeError(f\"[Case {idx}] Invalid JSON phenopacket: {e}\")\n",
-    "    predicted_packets.append(pkt)\n",
+    "        phenopacket_pred = Phenopacket.from_dict(json.loads(llm_content))\n",
+    "    except Exception as error:\n",
+    "        raise RuntimeError(\"[Case %d, PMID %s] Invalid Phenopacket JSON: %s\" % (idx, pmid_value, error))\n",
+    "\n",
+    "    predicted_packets.append(phenopacket_pred)\n",
+    "\n",
+    "    # Write the validated JSON to disk\n",
+    "    output_filename = \"%s.json\" % pmid_value\n",
+    "    output_filepath = os.path.join(validated_jsons_directory, output_filename)\n",
+    "    with open(output_filepath, \"w\", encoding=\"utf-8\") as out_f:\n",
+    "        json.dump(phenopacket_pred.to_json(), out_f, indent=2)\n",
+    "    print(\"Saved validated phenopacket for PMID %s to %s\"\n",
+    "          % (pmid_value, output_filepath))\n",
     "\n",
     "if len(predicted_packets) != len(input_texts):\n",
     "    raise RuntimeError(\"Number of predictions does not match number of inputs.\")\n",
+    "# Maybe change to this: 'assert len(predicted_packets) == len(list_input_texts)'\n",
     "\n",
     "print(f\"Generated {len(predicted_packets)} predicted phenopackets.\")\n",
     "\n",
-    "print(\"hello5\")  # print hello 5 as a sanity check"
+    "print(\"hello6\")  # print hello 6 as a sanity check"
    ],
    "outputs": [],
    "execution_count": null
@@ -340,9 +353,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 6. Evaluate predictions\n",
+    "## 7. Evaluate Predicted Phenopackets Against Ground Truth\n",
     "\n",
-    "Use our `PhenotypeEvaluator` to compare predicted vs. ground truth and compute metrics.\n"
+    "Compare each predicted phenopacket to its ground truth using PhenotypeEvaluator, then generate a Report object with overall metrics.\n"
    ],
    "id": "80f71065a95697e1"
   },
@@ -350,16 +363,64 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "evaluator = PhenotypeEvaluator()\n",
-    "report = evaluator.evaluate_batch(truth_packets, predicted_packets)\n",
+    "# Monkey‐patch a convenience method onto PhenotypeEvaluator\n",
+    "def _evaluate_batch(\n",
+    "    self,\n",
+    "    list_truth_packets,\n",
+    "    list_predicted_packets,\n",
+    "    creator,\n",
+    "    experiment,\n",
+    "    model,\n",
+    "    zero_division=0.0\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Run check_phenotypes over all truth/pred pairs, then return\n",
+    "    a plain‐dict report containing confusion_matrix, metrics,\n",
+    "    classification_report, and metadata.\n",
+    "    \"\"\"\n",
+    "    # Accumulate counts\n",
+    "    for truth_pkt, pred_pkt in zip(list_truth_packets, list_predicted_packets):\n",
+    "        self.check_phenotypes(\n",
+    "            experimentally_extracted_phenotypes=pred_pkt.list_phenotypes(),\n",
+    "            ground_truth_phenotypes=truth_pkt\n",
+    "        )\n",
+    "    # Build a Report object\n",
+    "    rpt = self.report(\n",
+    "        creator=creator,\n",
+    "        experiment=experiment,\n",
+    "        model=model,\n",
+    "        zero_division=zero_division\n",
+    "    )\n",
+    "    # Return a dict for easy indexing\n",
+    "    return {\n",
+    "        \"confusion_matrix\": rpt.confusion_matrix,\n",
+    "        \"metrics\": rpt.metrics,\n",
+    "        \"classification_report\": rpt.classification_report,\n",
+    "        \"metadata\": rpt.metadata,\n",
+    "    }\n",
     "\n",
-    "# Quick sanity check of report structure\n",
-    "if \"metrics\" not in report:\n",
+    "# Attach to the class\n",
+    "PhenotypeEvaluator.evaluate_batch = _evaluate_batch\n",
+    "\n",
+    "# Run the batch evaluation\n",
+    "evaluator = PhenotypeEvaluator()\n",
+    "batch_report = evaluator.evaluate_batch(\n",
+    "    list_truth_packets,\n",
+    "    predicted_packets,\n",
+    "    creator=\"Varenya\",\n",
+    "    experiment=\"Phenopacket LLM Extraction\",\n",
+    "    model=\"llama3.2:latest\"\n",
+    ")\n",
+    "\n",
+    "# Quick sanity check of the returned dict\n",
+    "if \"metrics\" not in batch_report:\n",
     "    raise KeyError(\"Evaluator report missing 'metrics' field.\")\n",
     "\n",
-    "import pprint; pprint.pprint(report)\n",
+    "# Pretty‐print the report dict\n",
+    "import pprint\n",
+    "pprint.pprint(batch_report)\n",
     "\n",
-    "print(\"hello6\")  # print hello 6 as a sanity check"
+    "print(\"hello7\")  # print hello 7 as a sanity check"
    ],
    "id": "ebbdc93ecf8aa29f",
    "outputs": [],
@@ -369,7 +430,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 7. Save first report\n",
+    "## Old Save first report\n",
     "\n",
     "Write the JSON report to disk for later analysis.\n"
    ],
@@ -398,9 +459,7 @@
    "cell_type": "markdown",
    "id": "c646976a-9ff5-4ab4-8eb1-6719449811d3",
    "metadata": {},
-   "source": [
-    "#### Inference"
-   ]
+   "source": "# Old Inference Implementation"
   },
   {
    "cell_type": "code",
