Write up a rough draft of Steps 6 and 7

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -420,7 +420,7 @@
     "import pprint\n",
     "pprint.pprint(batch_report)\n",
     "\n",
-    "print(\"hello7\")  # print hello 7 as a sanity check"
+    "print(\"hello7\")  # print hello 7 as a sanity check#"
    ],
    "id": "ebbdc93ecf8aa29f",
    "outputs": [],
