--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -23,7 +23,12 @@
   {
    "cell_type": "code",
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-10T08:56:52.403845Z",
+     "start_time": "2025-07-10T08:56:51.331633Z"
+    }
+   },
    "source": [
     "# Basic Setup\n",
     "import sys, os, glob, json, subprocess\n",
@@ -56,8 +61,10 @@
     "# All experimental outputs go under here\n",
     "experimental_data_root = os.path.join(project_root, \"experimental-data\")\n",
     "llm_output_directory = os.path.join(experimental_data_root, \"llm_output_dir\")                                           # intermediate .txt + raw JSON from LLM\n",
-    "dataset_csv_path = os.path.join(experimental_data_root, \"phenopacket_dataset.csv\")                                      # phenopacket_dataset.csv, manifest of pmid -> input -> truth\n",
     "validated_jsons_directory = os.path.join(experimental_data_root, \"validated_jsons\")                                     # validated_jsons, the final validated LLM phenopackets\n",
+    "\n",
+    "# Write phenopacket_dataset.csv into llm_output_directory\n",
+    "dataset_csv_path = os.path.join(llm_output_directory, \"phenopacket_dataset.csv\")                                      # a manifest of pmid -> input -> truth\n",
     "evaluation_report_output_path = os.path.join(project_root, \"reports\", \"first_report.json\")                              # the evaluation metrics report\n",
     "\n",
     "# Create any missing output folders\n",
@@ -74,16 +81,13 @@
     "        )\n",
     "    if not os.path.isdir(ground_truth_notebooks_directory):\n",
     "        raise FileNotFoundError(\n",
-    "            \"Ground truth notebooks directory not found: %s\"\n",
-    "            % ground_truth_notebooks_directory\n",
-    "        )\n",
+    "            \"Ground truth notebooks directory not found: %s\" % ground_truth_notebooks_directory)\n",
     "\n",
     "    subprocess.run([\n",
     "        sys.executable, \"-m\", \"scripts.create_phenopacket_dataset\",\n",
     "        pdf_input_directory,\n",
     "        ground_truth_notebooks_directory,\n",
     "        llm_output_directory,\n",
-    "        dataset_csv_path,\n",
     "        \"--recursive_input_dir\", \"True\",\n",
     "        \"--recursive_ground_truth_dir\", \"True\"\n",
     "    ], check=True)\n",
@@ -98,8 +102,33 @@
     "\n",
     "print(\"hello0\")  # print hello 0 as a sanity check"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Usage: python -m scripts.create_phenopacket_dataset [OPTIONS] INPUT_DATA_DIR\n",
+      "                                                    GROUND_TRUTH_FILES_DIR\n",
+      "                                                    DATASET_OUT_DIR\n",
+      "Try 'python -m scripts.create_phenopacket_dataset --help' for help.\n",
+      "\n",
+      "Error: Got unexpected extra argument (/Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/phenopacket_dataset.csv)\n"
+     ]
+    },
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command '['/Users/varenya/miniconda3/envs/p5/bin/python', '-m', 'scripts.create_phenopacket_dataset', '/Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/pmid_pdfs', '/Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/notebooks', '/Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/llm_output_dir', '/Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/phenopacket_dataset.csv', '--recursive_input_dir', 'True', '--recursive_ground_truth_dir', 'True']' returned non-zero exit status 2.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mCalledProcessError\u001B[39m                        Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[5]\u001B[39m\u001B[32m, line 54\u001B[39m\n\u001B[32m     48\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m os.path.isdir(ground_truth_notebooks_directory):\n\u001B[32m     49\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mFileNotFoundError\u001B[39;00m(\n\u001B[32m     50\u001B[39m             \u001B[33m\"\u001B[39m\u001B[33mGround truth notebooks directory not found: \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[33m\"\u001B[39m\n\u001B[32m     51\u001B[39m             % ground_truth_notebooks_directory\n\u001B[32m     52\u001B[39m         )\n\u001B[32m---> \u001B[39m\u001B[32m54\u001B[39m     \u001B[43msubprocess\u001B[49m\u001B[43m.\u001B[49m\u001B[43mrun\u001B[49m\u001B[43m(\u001B[49m\u001B[43m[\u001B[49m\n\u001B[32m     55\u001B[39m \u001B[43m        \u001B[49m\u001B[43msys\u001B[49m\u001B[43m.\u001B[49m\u001B[43mexecutable\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43m-m\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mscripts.create_phenopacket_dataset\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[32m     56\u001B[39m \u001B[43m        \u001B[49m\u001B[43mpdf_input_directory\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     57\u001B[39m \u001B[43m        \u001B[49m\u001B[43mground_truth_notebooks_directory\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     58\u001B[39m \u001B[43m        \u001B[49m\u001B[43mllm_output_directory\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     59\u001B[39m \u001B[43m        \u001B[49m\u001B[43mdataset_csv_path\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     60\u001B[39m \u001B[43m        \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43m--recursive_input_dir\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mTrue\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[32m     61\u001B[39m \u001B[43m        \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43m--recursive_ground_truth_dir\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mTrue\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\n\u001B[32m     62\u001B[39m \u001B[43m    \u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcheck\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m)\u001B[49m\n\u001B[32m     63\u001B[39m     \u001B[38;5;28mprint\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33mCreated dataset CSV at \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[33m\"\u001B[39m % dataset_csv_path)\n\u001B[32m     65\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33mPDF inputs folder:       \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[33m\"\u001B[39m % pdf_input_directory)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/miniconda3/envs/p5/lib/python3.13/subprocess.py:577\u001B[39m, in \u001B[36mrun\u001B[39m\u001B[34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001B[39m\n\u001B[32m    575\u001B[39m     retcode = process.poll()\n\u001B[32m    576\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m check \u001B[38;5;129;01mand\u001B[39;00m retcode:\n\u001B[32m--> \u001B[39m\u001B[32m577\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m CalledProcessError(retcode, process.args,\n\u001B[32m    578\u001B[39m                                  output=stdout, stderr=stderr)\n\u001B[32m    579\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m CompletedProcess(process.args, retcode, stdout, stderr)\n",
+      "\u001B[31mCalledProcessError\u001B[39m: Command '['/Users/varenya/miniconda3/envs/p5/bin/python', '-m', 'scripts.create_phenopacket_dataset', '/Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/pmid_pdfs', '/Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/notebooks', '/Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/llm_output_dir', '/Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/phenopacket_dataset.csv', '--recursive_input_dir', 'True', '--recursive_ground_truth_dir', 'True']' returned non-zero exit status 2."
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "metadata": {},
