--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -477,7 +477,7 @@
     "    print(\"Saved validated phenopacket for PMID %s to %s\"\n",
     "          % (pmid_value, output_filepath))\n",
     "\n",
-    "if len(predicted_packets) != len(input_texts):\n",
+    "if len(predicted_packets) != len(list_input_texts):\n",
     "    raise RuntimeError(\"Number of predictions does not match number of inputs.\")\n",
     "# Maybe change to this: 'assert len(predicted_packets) == len(list_input_texts)'\n",
     "\n",
