Add comment about potentially over-aggressive deduplication

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -144,7 +144,7 @@
     "print(\"Loaded %d rows from dataset CSV\" % len(dataframe_cases))\n",
     "\n",
     "# Drop duplicate PMIDs\n",
-    "dataframe_cases = dataframe_cases.drop_duplicates(\"pmid\").reset_index(drop=True)\n",
+    "dataframe_cases = dataframe_cases.drop_duplicates(\"pmid\").reset_index(drop=True) # This may be too aggressive and I need to check if this is a good approach\n",
     "print(\"After deduplication: %d unique PMID cases\" %len(dataframe_cases))\n",
     "\n",
     "# Verify required columns\n",
